--- a/package.json
+++ b/package.json
@@ -1,4 +1,14 @@
 {
+  "name": "recipe-book",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
+  "scripts": {
+    "start": "nodemon ."
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
     "express": "^4.18.2",
     "node": "^19.6.1",
